apps/tencentcloud/jenkins/post/_base/policies/tests/replace-ghcr-registry/patched-plain.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-plain
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: cr-qcloud.pingcap.net/mirrors/ghcr/pingcap-qe/ci-jenkins:latest
  imagePullSecrets:
    - name: ci-registry-auth
