apps/tencentcloud/jenkins/post/_base/policies/tests/replace-ghcr-registry/resource-existing.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-existing
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: ghcr.io/pingcap-qe/ci-jenkins:latest
  imagePullSecrets:
    - name: ghcr-io
